--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="form">
 	<form action="login_auth.php" method="POST">
 		<i class="fas fa-user"></i>
-		<label> Přihlašovací jméno:</label>
+		<label> Email:</label>
 		<input type="text" name="email" id="email"></br>
 		<i class="fas fa-lock"></i>
 		<label> Heslo:</label>
