--- a/index.html
+++ b/index.html
@@ -4,50 +4,33 @@
 	<meta charset="UTF-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link rel="stylesheet" href="style.css"/>
-	<title>Login</title>
+	<link rel="stylesheet" href="assets/css/style.css"/>
+	<link rel="stylesheet" href="assets/css/login-style.css"/>
+	<title>Přihlašovací stránka</title>
 </head>
 <body>
-
-<h1 class="whitening">Skladová firma s. r. o</h1>
-<div class="form">
-	<form action="login_auth.php" method="POST">
-		<i class="fas fa-user"></i>
-		<label> Email:</label>
-		<input type="text" name="email" id="email"></br>
-		<i class="fas fa-lock"></i>
-		<label> Heslo:</label>
-		<input type="password" name="password" id="password"></br>
-		<button type="submit" id="btn" style="width: 100%; margin-bottom: 10px">Přihlásit</button>
+<h1 class="whitening">DEPOTGISTICS s. r. o</h1>
+<div class="container-form">
+	<form action="login_auth.php" method="POST" id="form-login">
+		<div class="alert alert-success" id="login-alert" style="display: none;">
+			<span class="message-box-login"></span>
+		</div>
+		<div class="form-control" style="margin-top: 40px">
+			<input type="text" name="email" id="email" style="color: white;" autocomplete="off" class="data-login">
+			<label class="lab-email">Email</label>
+		</div>
+		<div class="form-control">
+			<input type="password" name="password" id="password" class="data-login">
+			<label class="lab-pw">Heslo</label>
+		</div>
+		<button type="submit" onclick="sumbit_record_login()" id="btn" style="width: 100%; margin-bottom: 10px; color: white;"><strong>Přihlásit</strong></button>
+		<small><a href="register.php" class="hover" style="color: white;">Nemáte účet? <strong>Klikni zde!</strong></a></small>
 	</form>
-
-
-	<small><a href="register.php" class="hover">Nemáte účet? Klikni zde!</a></small>
-
 </div>
+
 <script src="https://kit.fontawesome.com/09be11f3c3.js" crossorigin="anonymous"></script>
-<script>
-	function validation(){
-      let user = document.getElementById('email').value.trim();
-      const pass = document.getElementById('password').value.trim();
-      if(user.length === "" && pass.length){
-          alert("Přihlašovací jméno a heslo jsou prázné")
-					return false;
-			}
-      else{
-          if(user.length === ''){
-              alert("Přihlašovací jméno je prázné");
-              return false;
-					}
-          if(pass.length === ''){
-              alert("Heslo je prázdné");
-              return false;
-          }
-			}
-  }
-    validation();
-</script>
-
-
+<script src="assets/js/login-script.js"></script>
+<script src="assets/js/ajax.js"></script>
+<script src="assets/js/script.js"></script>
 </body>
 </html>
